--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <div class="container">
     <img src="images/logo.png" class="logo">
 
-    <div class="flex justify-center  items-center w-full"><span class="mt-20 shadow-l shadow-gray text-6xl font-semibold text-white">Coming Soon..</span></div>
+    <!-- <div class="flex justify-center  items-center w-full"><span class="mt-20 shadow-l shadow-gray text-6xl font-semibold text-white"></span></div> -->
+    <div class="content">
+        <p>Website Is Under Maintenance</p>
+        <h1>We're <span>Launching</span> Soon</h1>
+    </div>
 
     
     <img src="images/rocket.png" class="rocket">
